--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>Instagram</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="public/assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 
   <!-- fontes -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
